fix media section to stretch full width of max-container

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -394,8 +394,6 @@ header .header-container {
 }
 
 .media-section {
-  display: flex;
-  justify-content: center;
   padding: clamp(5rem, 3.864rem + 4.545vw, 7.5rem) 0;
 }
 
